--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # Logs
 logs
 *.log
@@ -8,7 +10,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.env*
 dist
 dist-ssr
 *.local
@@ -23,3 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
